tests/bad/my001.lat
int main() { return 42; }

int f(int a, int b, int c) {
        int n = 2;
        {
            int n = 10;
            n++;
        if (true) {
            int n = 20;
            n = n * n - 1;
            n=n;
        while (true) {
            int n = 30;
            n = n + "";
            n=n;
        }
            n--;
            n=n;
        }
            printInt(n);
        }
            return n * n / n;
        }